# phopylslhelper

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: iograph_master_csv_builder_a69410b1.plan.md
src/phopylslhelper/: __init__.py  datetime_helpers.py  easy_time_sync.py
src/phopylslhelper/core/: data_modalities.py  xdf_files.py
src/phopylslhelper/file_metadata_caching/: __init__.py  data_file_metadata.py  file_metadata.py  manager.py  video_metadata.py
tests/: test_lsl_timestamp_alignment.py
