[project]
name = "phopylslhelper"
version = "1.0.5"
description = "A simple wrapper/helper for easy loging with pylsl (labstreaminglayer) "
readme = "README.md"
authors = [
    { name = "Pho Hale", email = "PhoHale@gmail.com" }
]
requires-python = ">=3.8.10"
dependencies = [
    "pylsl>=1.16.2",
    "pytz>=2025.2",
    "pandas>=1.5.3,<3.0.0",
    "attrs>=22.2.0,<23",
]

[project.optional-dependencies]
video = ["opencv-python>=4.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
